infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: solomonndi96/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 8200
      targetPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-nodeport-srv # name of the service
spec: # specification for the service
  type: NodePort #type of service it could be any of this [NodePort, LoadBalancer, ClusterIP, External Name]
  selector: #tells which pod should be exposed to the outside of the cluster
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 1200
      targetPort: 4002
