infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    # this annotation section is what's going to help the ingress controller that we applied earlier
    # using k apply -f https:...; understand that we're trying to feed it some routing rule
    nginx.ingress.kubernetes.io/use-regex: 'true' # this allows kubernetes understands regex and tells kubernetes that regex might be used in the path route
spec:
  rules: # all the routing rule that the ingress controller will be expecting after seeing the annotations tag
    - host: post.com
      http:
        paths:
          - path: /post
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-srv
                port:
                  number: 3060
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 8200
          - path: /post/?(.*)/comment
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 6000
          - path: /?.*
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
